fix: error message not showing on bad response

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Prompt", sans-serif;
+  font-family: 'Prompt', sans-serif;
 }
 
 h1 {
@@ -14,7 +14,6 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   z-index: 1000;
-  /* max-width: 350px; */
 }
 
 #map {
@@ -42,11 +41,9 @@ img.leaflet-marker-icon.fade {
   z-index: 1000;
 }
 
-/* @media only screen and (max-width: 475px) {
-  h1 {
-    max-width: 350px;
-  }
-} */
+.error {
+  color: red;
+}
 
 @media only screen and (max-width: 620px) {
   h1 {
